Irritating white space, and lack thereof hotfix. There is probably a better way to fix this.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -88,6 +88,7 @@ img {
 #content {
   padding: 0px;
   padding-top: 30px;
+  padding-bottom: 30px;
 //   padding-bottom: 30px;
   // overflow-y: scroll;
   // margin-bottom: 100px;
